[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volforge"
version = "1.0.0"
description = "VolForge: Advanced stochastic modeling & option pricing lab (BS & Heston MC)"
authors = [{name = "Felipe Impieri"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "scipy>=1.10", "streamlit>=1.28"]

[project.scripts]
volforge = "volforge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["volforge"]
